2014-02-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* .gitignore: Created.
	* README.md: Added patchbuild details.
	* SOURCES.README: Created from Atmel distributions.
	* avr32-versions.sh: Created, based on AVR 8-bit version.
	* build-all/sh: Created, based on AVR 8-bit version and
	build-avr32-gnu-toolchain.sh. Still won't build GDB though.
	* build-avr32-gnu-toolchain.sh: Created from Atmel distributions.
	* patchbuild.sh: Created.
	* patches/binutils/200-binutils-avr32-autoconf.patch: Created from
	Atmel distributions.
	* patches/binutils/201-binutils-avr32-upgrade-fix.patch: Likewise.
	* patches/binutils/300-binutils-avr32-bfd.patch: Likewise.
	* patches/binutils/301-binutils-avr32-binutils.patch: Likewise.
	* patches/binutils/302-binutils-avr32-gas.patch: Likewise.
	* patches/binutils/303-binutils-avr32-include.patch: Likewise.
	* patches/binutils/304-binutils-avr32-ld.patch: Likewise.
	* patches/binutils/305-binutils-avr32-opcodes.patch: Likewise.
	* patches/binutils/400-binutils-avr32-fixes.patch: Likewise.
	* patches/binutils/401-binutils-avr32-fpu.patch: Likewise.
	* patches/binutils/402-binutils-avr32-bug-7435.patch: Likewise.
	* patches/binutils/403-binutils-avr32-bug-11979.patch: Likewise.
	* patches/binutils/404-binutils-avr32-avrtc176.patch: Likewise.
	* patches/binutils/405-binutils-avr32-bug-avrtc633.patch: Likewise.
	* patches/binutils/500-binutils-avr32-mxt768e.patch: Likewise.
	* patches/binutils/501-binutils-avr32-uc3c.patch: Likewise.
	* patches/binutils/502-binutils-avr32-uc3l0128.patch: Likewise.
	* patches/binutils/503-binutils-avr32-uc3a4.patch: Likewise.
	* patches/binutils/504-binutils-avr32-uc3d.patch: Likewise.
	* patches/binutils/505-binutils-avr32-uc3l3l4.patch: Likewise.
	* patches/binutils/506-binutils-avr32-mxt1664s-mxt1664eng.patch:
	Likewise.
	* patches/binutils/507-binutils-avr32-mxt540e.patch: Likewise.
	* patches/binutils/508-binutils-avr32-uc128l5.patch: Likewise.